--- a/project/src/app/components/login/login.component.html
+++ b/project/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="passwordinput">Password</label>
       <div class="col-md-4">
-        <input id="passwordinput" name="passwordinput" type="password" class="form-control input-md" [(ngModel)]="password">
+        <input id="passwordinput" name="passwordinput" type="password" class="form-control input-md" [(ngModel)]="pw">
       </div>
     </div>
 
