--- a/project/src/app/components/register/register.component.html
+++ b/project/src/app/components/register/register.component.html
@@ -26,7 +26,7 @@
       <label class="col-md-4 control-label" for="passwordinput">Passwort</label>
       <div class="col-md-4">
         <input id="passwordinput" name="passwordinput" placeholder="Mind. 5 zeichen" type="password" class="form-control input-md"
-          [(ngModel)]="benutzer.password">
+          [(ngModel)]="benutzer.pw">
       </div>
     </div>
 
@@ -35,7 +35,7 @@
       <label class="col-md-4 control-label" for="passwordinput2">Passwort wiederholen</label>
       <div class="col-md-4">
         <input id="passwordinput2" name="passwordinput2" placeholder="Mind. 5 zeichen" type="password" class="form-control input-md"
-          [(ngModel)]="password2">
+          [(ngModel)]="pw2">
       </div>
     </div>
 
