--- a/project/src/app/components/proposal/proposal.component.html
+++ b/project/src/app/components/proposal/proposal.component.html
@@ -1,7 +1,7 @@
 <form class="form-horizontal">
   <fieldset>
 
-    <div class="alert alert-warning" role="alert"></div>
+    <div class="alert alert-warning" role="alert">Alle Felder mit * sind Pflichtfelder!</div>
 
     <!-- Form Name -->
     <legend>Angebotserstellung</legend>
@@ -10,7 +10,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="selectbasic">* Hersteller</label>
       <div class="col-md-4">
-        <select id="selectBrand" name="selectBrand" class="form-control" [(ngModel)]="manufacturer" required="required">
+        <select id="selectBrand" name="selectBrand" class="form-control" [(ngModel)]="manufacturer">
           <option value="leer"></option>
           <option value="Acura">Acura</option>
           <option value="Alfa Romeo">Alfa Romeo</option>
