--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -1,28 +1,19 @@
 <div class="jumbotron">
     <h1>{{selectedCar.modell}} {{selectedCar.manufacturer}} </h1>
-    <div></div>
+    <div>IMAGE PLACEHOLDER</div>
     <div>
-        <p>Hersteller : {{selectedCar.year}}</p>
-        <p>Modell : {{selectedCar.year}}</p>
-        <p>Preis : {{selectedCar.year}}</p>
-    TBD
+        <p>Hersteller : {{selectedCar.year}} | Leistung : {selectedCar.ps}}</p>
+        <p>Modell : {{selectedCar.year}} | Kilometerstand : {selectedCar.km_driven}}</p>
+        <p>Preis : <span class="badge" STYLE="color: black; font-size: 19pt">{{selectedCar.price}}€</span> | Baujahr : {selectedCar.year}}</p>
     </div>
-    <div></div>
-
-  <p></p>
-  <p>Preis
-    <span class="badge" STYLE="color: black; font-size: 19pt">{{selectedCar.price}}€</span>
-  </p>
-  <p></p>
-  <p>Erstzulassung : {{selectedCar.year}}</p>
-  <p>Kilometerstand : {{selectedCar.km_driven}}km</p>
-  <p>Farbe: {{selectedCar.colour}}</p>
-  <p>Kategorie: {{selectedCar.category}}</p>
-  <p>Fahrzeugstand: {{selectedCar.state}}</p>
-  <p>PS: {{selectedCar.ps}}</p>
-
-  <p>
-    <button type="button" (click)="setAsFavourite()" class="btn btn-default">Favorisieren</button>
+    <div>
+        <p>Erstzulassung : {{selectedCar.year}}</p>
+        <p>Farbe: {{selectedCar.colour}}</p>
+        <p>Kategorie: {{selectedCar.category}}</p>
+        <p>Fahrzeugstand: {{selectedCar.state}}</p>
+    </div>
+    <p>
+        <button type="button" (click)="setAsFavourite()" class="btn btn-default">Favorisieren</button>
     <!-- <button type="button" [disabled]="isLoggedIn()" onclick="resetAsFavourite()" class="btn btn-default">Entfavorisieren</button> -->
-  </p>
+    </p>
 </div>
