--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -10,7 +10,12 @@
         <p>Erstzulassung : {{selectedCar.year}}</p>
         <p>Farbe: {{selectedCar.colour}}</p>
         <p>Kategorie: {{selectedCar.category}}</p>
-        <p>Fahrzeugstand: {{selectedCar.state}}</p>
+        <p>Verbrauch: {{selectedCar.state}}</p>
+        <p>Farbe: {{selectedCar.state}}</p>
+        <p>Anzahl der Türen: {{selectedCar.state}}</p>
+        <p>Fahrzeugzustand: {{selectedCar.state}}</p>
+        <p>Kraftstoffart: {{selectedCar.state}}</p>
+        <p>Beschreibung: {{selectedCar.state}}</p>
     </div>
     <p>
         <button type="button" (click)="setAsFavourite()" class="btn btn-default">Favorisieren</button>
