Favícon hinzugefügt + kleine Fixes

--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -2,9 +2,9 @@
     <div class="panel-heading">
         <h3 class="panel-title">{{selectedCar.modell}} {{selectedCar.manufacturer}}</h3>
     <div>
-        <p>Hersteller : {{selectedCar.year}} | Leistung : {selectedCar.ps}}</p>
-        <p>Modell : {{selectedCar.year}} | Kilometerstand : {selectedCar.km_driven}}</p>
-        <p>Preis : <span class="badge" STYLE="color: black; font-size: 19pt">{{selectedCar.price}}€</span> | Baujahr : {selectedCar.year}}</p>
+        <p>Hersteller : {{selectedCar.year}} | Leistung : {{selectedCar.ps}}</p>
+        <p>Modell : {{selectedCar.year}} | Kilometerstand : {{selectedCar.km_driven}}</p>
+        <p>Preis : <span class="badge" STYLE="color: black; font-size: 19pt">{{selectedCar.price}}€</span> | Baujahr : {{selectedCar.year}}</p>
     </div>
     <div class="panel-body">
     <div class="offer-detail-information-container">
