--- a/project/src/app/components/register/register.component.html
+++ b/project/src/app/components/register/register.component.html
@@ -45,7 +45,7 @@
       <div class="col-md-4">
         <input type="checkbox" name="agb" aria-label="..." [(ngModel)]="cb_agb" />
         <label> Ich habe die </label>
-        <a href="/login" target="_blank">AGB</a>
+        <a href="/agb" target="_blank">AGB</a>
         <label> gelesen und Akzeptiere Sie.</label>
       </div>
     </div>
