--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -1,35 +1,85 @@
 <div class="panel panel-default" style="margin-top: 20px;">
     <div class="panel-heading">
-       <h3>{{selectedCar.modell}} {{selectedCar.manufacturer}} </h3>
+        <h3>{{selectedCar.modell}} {{selectedCar.manufacturer}} <span class="label label-success">{{selectedCar.price}}€</span></h3>
     </div>
 
     <div class="panel-body">
         <div class="offer-detail-information-container">
             <div class="offer-detail-image-container">IMAGE PLACEHOLDER</div>
             <div class="offer-detail-main-information-container">
-                <p>Hersteller : {{selectedCar.year}} | Leistung : {{selectedCar.ps}}</p>
-                <p>Modell : {{selectedCar.year}} | Kilometerstand : {{selectedCar.km_driven}}</p>
-                <p>Preis : <span class="badge" STYLE="color: black; font-size: 19pt">{{selectedCar.price}}€</span> | Baujahr : {{selectedCar.year}}</p>
+                hier kommen die allgemeinen Informationen sowie die Händlerdaten hin. 
             </div>
         </div>
 
         <hr class="featurette-divider">
 
-        <div>
-            <p>Erstzulassung : {{selectedCar.year}}</p>
-            <p>Farbe: {{selectedCar.colour}}</p>
-            <p>Kategorie: {{selectedCar.category}}</p>
-            <p>Verbrauch: {{selectedCar.state}}</p>
-            <p>Farbe: {{selectedCar.state}}</p>
-            <p>Anzahl der Türen: {{selectedCar.state}}</p>
-            <p>Fahrzeugzustand: {{selectedCar.state}}</p>
-            <p>Kraftstoffart: {{selectedCar.state}}</p>
-            <p>Beschreibung: {{selectedCar.state}}</p>
-    
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-2"><b>Hersteller</b></div>
+                <div class="col-sm-3">{{selectedCar.year}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Leistung</b></div>
+                <div class="col-sm-3">{{selectedCar.ps}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Modell</b></div>
+                <div class="col-sm-3">{{selectedCar.year}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Kilometerstand</b></div>
+                <div class="col-sm-3">{{selectedCar.km_driven}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Baujahr</b></div>
+                <div class="col-sm-3">{{selectedCar.year}}</div>
+            </div>
+
+            <br/>
+            <br/>
+
+            <div class="row">
+                <div class="col-sm-2"><b>Erstzulassung</b></div>
+                <div class="col-sm-3">{{selectedCar.year}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Farbe</b></div>
+                <div class="col-sm-3">{{selectedCar.colour}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Kategorie</b></div>
+                <div class="col-sm-3">{{selectedCar.category}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Verbrauch</b></div>
+                <div class="col-sm-3">{{selectedCar.category}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Anzahl der Türen</b></div>
+                <div class="col-sm-3">{{selectedCar.category}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Fahrzeugzustand</b></div>
+                <div class="col-sm-3">{{selectedCar.category}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Kraftstoffart</b></div>
+                <div class="col-sm-3">{{selectedCar.category}}</div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2"><b>Beschreibung</b></div>
+                <div class="col-sm-3">{{selectedCar.category}}</div>
+            </div>
         </div>
     </div>
         
-    <div class="panel-footer">
+    <div class="panel-footer" style="text-align:right">
+        <button type="button" (click)="setAsFavourite()" class="btn btn-default pull-left">
+            <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
+        </button>
+        <button type="button" class="btn btn-default">Verkäufer kontaktieren TBD
+            <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+        </button> 
         <button type="button" (click)="setAsFavourite()" class="btn btn-default">Favorisieren
             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
         </button>
