--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -17,26 +17,47 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="">Startseite</a>
+                    <a href="">
+                        <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                        Startseite 
+                    </a>
                 </li>
                 <li>
-                    <a *ngIf="cookieService.get('online')" href="/">Kontoeinstellungen (TBD)</a>
+                    <a *ngIf="cookieService.get('online')" href="/">
+                        <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+                        Kontoeinstellungen
+                    </a>
                 </li>
                 <li>
-                    <a *ngIf="cookieService.get('online') == undefined" href="/login">Login</a>
-                    <a *ngIf="cookieService.get('online')" href="/logout">Logout</a>
+                    <a *ngIf="cookieService.get('online') == undefined" href="/login">
+                        <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
+                        Login
+                    </a>
+                    <a *ngIf="cookieService.get('online')" href="/logout">
+                        <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
+                        Logout
+                    </a>
                 </li>
                 <li>
-                    <a *ngIf="cookieService.get('online') == undefined" href="/register">Registrieren</a>
+                    <a *ngIf="cookieService.get('online') == undefined" href="/register">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        Registrieren
+                    </a>
                 </li>
                 <li>
-                    <a *ngIf="cookieService.get('online')" href="/addCar">Angebotserstellung</a>
+                    <a *ngIf="cookieService.get('online')" href="/addCar">
+                        <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
+                        Angebotserstellung
+                    </a>
                 </li>
             </ul>
             <app-search></app-search>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a *ngIf="cookieService.get('online')" href="/favoriten">Favoriten</a>
+                    <a *ngIf="cookieService.get('online')" href="/favoriten">
+                        <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                        Favoriten
+                    </a>
                 </li>
             </ul>
         </div>
