--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -16,7 +16,7 @@
                 <hr class="featurette-divider">
                 <div class="row">
                     <div class="col-sm-3"><b>Hersteller</b></div>
-                    <div class="col-sm-4">{{selectedCar.year}}</div>
+                    <div class="col-sm-4">{{selectedCar.manufacturer}}</div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3"><b>Leistung</b></div>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-3"><b>Modell</b></div>
-                    <div class="col-sm-4">{{selectedCar.year}}</div>
+                    <div class="col-sm-4">{{selectedCar.modell}}</div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3"><b>Kilometerstand</b></div>
@@ -40,7 +40,7 @@
     
                 <div class="row">
                     <div class="col-sm-3"><b>Erstzulassung</b></div>
-                    <div class="col-sm-4">{{selectedCar.year}}</div>
+                    <div class="col-sm-4">{{selectedCar.registration_date}}</div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3"><b>Farbe</b></div>
@@ -51,24 +51,24 @@
                     <div class="col-sm-4">{{selectedCar.category}}</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Verbrauch</b></div>
+                    <div class="col-sm-3"><b>Verbrauch TBD</b></div>
                     <div class="col-sm-4">{{selectedCar.category}}</div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3"><b>Anzahl der Türen</b></div>
-                    <div class="col-sm-4">{{selectedCar.category}}</div>
+                    <div class="col-sm-4">{{selectedCar.number_of_doors}}</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Fahrzeugzustand</b></div>
+                    <div class="col-sm-3"><b>Fahrzeugzustand TBD</b></div>
                     <div class="col-sm-4">{{selectedCar.category}}</div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3"><b>Kraftstoffart</b></div>
-                    <div class="col-sm-4">{{selectedCar.category}}</div>
+                    <div class="col-sm-4">{{selectedCar.fuel_type}}</div>
                 </div>
                 <div class="row">
                     <div class="col-sm-3"><b>Beschreibung</b></div>
-                    <div class="col-sm-4">{{selectedCar.category}}</div>
+                    <div class="col-sm-4">{{selectedCar.description}}</div>
                 </div>
                 </div>
             
@@ -80,6 +80,7 @@
                 <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span> {{vendorType}} <br/>
                 <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>  <br/>
 
+                
             </div>
         </div>
            
