#87 Hinzufügen von FavouritComponent, Änderungen Route, Änderung Templates und fix Verbindung zu RestAPI

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -19,7 +19,7 @@
                 <li>
                     <a href="">
                         <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                        Startseite 
+                        Startseite
                     </a>
                 </li>
                 <li>
@@ -57,6 +57,7 @@
                     <a *ngIf="cookieService.get('online')" href="/favoriten">
                         <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                         Favoriten
+                        <span class="label label-success">{{ countFavourites }}</span>
                     </a>
                 </li>
             </ul>
