--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -1,6 +1,8 @@
 <div class="panel panel-default" style="margin-top: 20px;">
     <div class="panel-heading">
-        <h3>{{selectedCar.modell}} {{selectedCar.manufacturer}} <span class="label label-success">{{selectedCar.price}}€</span></h3>
+        <h3>{{selectedCar.modell}} {{selectedCar.manufacturer}}
+            <span class="label label-success">{{selectedCar.price}}€</span>
+        </h3>
     </div>
 
     <div class="panel-body">
@@ -15,89 +17,107 @@
                 <h4>Technische Daten</h4>
                 <hr class="featurette-divider">
                 <div class="row">
-                    <div class="col-sm-3"><b>Hersteller</b></div>
+                    <div class="col-sm-3">
+                        <b>Hersteller</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.manufacturer}}</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Leistung</b></div>
-                    <div class="col-sm-4">{{selectedCar.ps}}</div>
-                </div>
+                    <div class="col-sm-3">
+                        <b>Leistung</b>
+                    </div>
+                    <div class="col-sm-4">{{selectedCar.ps}} PS</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Modell</b></div>
+                    <div class="col-sm-3">
+                        <b>Modell</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.modell}}</div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-3">
+                        <b>Kilometerstand</b>
+                    </div>
+                    <div class="col-sm-4">{{selectedCar.km_driven}} KM</div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Kilometerstand</b></div>
-                    <div class="col-sm-4">{{selectedCar.km_driven}}</div>
-                </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-3"><b>Baujahr</b></div>
+                    <div class="col-sm-3">
+                        <b>Baujahr</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.year}}</div>
                 </div>
-                </div>
-    
+
                 <br/>
                 <br/>
-    
+
                 <div class="row">
-                    <div class="col-sm-3"><b>Erstzulassung</b></div>
+                    <div class="col-sm-3">
+                        <b>Erstzulassung</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.registration_date}}</div>
                 </div>
-                </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Farbe</b></div>
+                    <div class="col-sm-3">
+                        <b>Farbe</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.colour}}</div>
                 </div>
-                </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Kategorie</b></div>
+                    <div class="col-sm-3">
+                        <b>Kategorie</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.category}}</div>
                 </div>
-                </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Verbrauch TBD</b></div>
+                    <div class="col-sm-3">
+                        <b>Verbrauch TBD</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.category}}</div>
                 </div>
-                </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Anzahl der Türen</b></div>
+                    <div class="col-sm-3">
+                        <b>Anzahl der Türen</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.number_of_doors}}</div>
                 </div>
-                </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Fahrzeugzustand TBD</b></div>
+                    <div class="col-sm-3">
+                        <b>Fahrzeugzustand TBD</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.category}}</div>
                 </div>
-                </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Kraftstoffart</b></div>
+                    <div class="col-sm-3">
+                        <b>Kraftstoffart</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.fuel_type}}</div>
                 </div>
-                </div>
                 <div class="row">
-                    <div class="col-sm-3"><b>Beschreibung</b></div>
+                    <div class="col-sm-3">
+                        <b>Beschreibung</b>
+                    </div>
                     <div class="col-sm-4">{{selectedCar.description}}</div>
                 </div>
-                </div>
-                </div>
-            
+            </div>
+
             <div class="col-sm-4">
                 <h4>Verkäuferinformationen</h4>
                 <hr class="featurette-divider">
-                <span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{vendorUsername}} <br/>
-                <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> {{vendorContactEmail}} <br/>
-                <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span> {{vendorType}} <br/>
-                <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>  <br/>
+                <span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{vendorUsername}}
+                <br/>
+                <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> {{vendorContactEmail}}
+                <br/>
+                <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span> {{vendorType}}
+                <br/>
+                <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
+                <br/>
 
-                
+
             </div>
         </div>
-           
-            
-           
+
+
+
 
     </div>
 
@@ -114,7 +134,6 @@
         <button type="button" *ngIf="isFavorite == 1" (click)="deleteAsFavourite()" class="btn btn-default">Favorit entfernen
             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
         </button>
-        <!-- <button type="button" [disabled]="isLoggedIn()" onclick="resetAsFavourite()" class="btn btn-default">Entfavorisieren</button> -->
     </div>
 
 </div>
