--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -110,9 +110,11 @@
                 <span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span> {{vendorType}}
                 <br/>
                 <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
-                <br/>
 
-
+                <h4>Angebotsinformationen</h4>
+                <hr class="featurette-divider">
+                aldfsdh
+                {{relatedOffer.user_id}}
             </div>
         </div>
 
@@ -128,7 +130,7 @@
         <button type="button" class="btn btn-default">Verkäufer kontaktieren TBD
             <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
         </button>
-        <button type="button" *ngIf="isFavorite == 0" (click)="setAsFavourite()" class="btn btn-default">Favorisieren
+        <button type="button" *ngIf="isFavorite == 0" (click)="d()" class="btn btn-default">Favorisieren
             <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
         </button>
         <button type="button" *ngIf="isFavorite == 1" (click)="deleteAsFavourite()" class="btn btn-default">Favorit entfernen
