#66 Weitere Informationen zu dem Angebot werden angezeigt

--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -113,8 +113,8 @@
 
                 <h4>Angebotsinformationen</h4>
                 <hr class="featurette-divider">
-                aldfsdh
-                {{relatedOffer.user_id}}
+                 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span> {{relatedOffer.description}}
+         
             </div>
         </div>
 
