--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -25,7 +25,19 @@
                 <li>
                     <a *ngIf="cookieService.get('online')" href="/">
                         <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-                        Kontoeinstellungen
+                        Mein Account ({{cookieService.get('user')}})
+                    </a>
+                </li>
+                <li>
+                    <a *ngIf="cookieService.get('online')" href="/addCar">
+                        <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
+                        Angebotserstellung
+                    </a>
+                </li>
+                <li>
+                    <a *ngIf="cookieService.get('online') == undefined" href="/register">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        Registrieren
                     </a>
                 </li>
                 <li>
@@ -36,18 +48,6 @@
                     <a *ngIf="cookieService.get('online')" href="/logout">
                         <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
                         Logout
-                    </a>
-                </li>
-                <li>
-                    <a *ngIf="cookieService.get('online') == undefined" href="/register">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                        Registrieren
-                    </a>
-                </li>
-                <li>
-                    <a *ngIf="cookieService.get('online')" href="/addCar">
-                        <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
-                        Angebotserstellung
                     </a>
                 </li>
             </ul>
