#94 Mein Konto View angelegt und & Components

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -23,7 +23,7 @@
                     </a>
                 </li>
                 <li>
-                    <a *ngIf="cookieService.get('online')" href="/">
+                    <a *ngIf="cookieService.get('online')" href="/myAccount">
                         <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
                         Mein Account ({{cookieService.get('user')}})
                     </a>
