#87 neues Routing Modell und Anpassung an favorites.component

--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -113,8 +113,8 @@
 
                 <h4>Angebotsinformationen</h4>
                 <hr class="featurette-divider">
-                 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span> {{relatedOffer.description}}
-         
+                <span class="glyphicon glyphicon-comment" aria-hidden="true"></span> {{relatedOffer.description}}
+
             </div>
         </div>
 
@@ -124,7 +124,7 @@
     </div>
 
     <div class="panel-footer" style="text-align:right">
-        <button type="button" (click)="toMainPage()" class="btn btn-default pull-left">
+        <button type="button" routerLink="" routerLinkActive="active" class="btn btn-default pull-left">
             <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>
         </button>
         <button type="button" class="btn btn-default">Verkäufer kontaktieren TBD
