--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -17,35 +17,35 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="">
+                    <a routerLink="" routerLinkActive="active">
                         <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                         Startseite
                     </a>
                 </li>
                 <li>
-                    <a *ngIf="cookieService.get('online')" href="/myAccount">
+                    <a *ngIf="cookieService.get('online')" routerLink="/myAccount" routerLinkActive="active">
                         <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
                         Mein Account ({{cookieService.get('user')}})
                     </a>
                 </li>
                 <li>
-                    <a *ngIf="cookieService.get('online')" href="/addCar">
+                    <a *ngIf="cookieService.get('online')" routerLink="/addCar" routerLinkActive="active">
                         <span class="glyphicon glyphicon-tag" aria-hidden="true"></span>
                         Angebotserstellung
                     </a>
                 </li>
                 <li>
-                    <a *ngIf="cookieService.get('online') == undefined" href="/register">
+                    <a *ngIf="cookieService.get('online') == undefined" routerLink="/register" routerLinkActive="active">
                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                         Registrieren
                     </a>
                 </li>
                 <li>
-                    <a *ngIf="cookieService.get('online') == undefined" href="/login">
+                    <a *ngIf="cookieService.get('online') == undefined" routerLink="/login" routerLinkActive="active">
                         <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
                         Login
                     </a>
-                    <a *ngIf="cookieService.get('online')" href="/logout">
+                    <a *ngIf="cookieService.get('online')" routerLink="/logout" routerLinkActive="active">
                         <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
                         Logout
                     </a>
@@ -54,7 +54,7 @@
             <app-search></app-search>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a *ngIf="cookieService.get('online')" href="/favoriten">
+                    <a *ngIf="cookieService.get('online')" routerLink="/favoriten" routerLinkActive="active">
                         <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
                         Favoriten
                         <span *ngIf="countFavourites" class="label label-success">{{ countFavourites }}</span>
@@ -73,9 +73,9 @@
 </div>
 
 <div class='footer navbar-fixed-bottom carscout-footer'>
-    <a href="/impressum">Impressum</a>
+    <a routerLink="/impressum" routerLinkActive="active">Impressum</a>
     |
-    <a href="/privacyPolicy">Datenschutzerklärung</a>
+    <a routerLink="/privacyPolicy" routerLinkActive="active">Datenschutzerklärung</a>
     |
-    <a href="/agb">AGB</a>
+    <a routerLink="/agb" routerLinkActive="active">AGB</a>
 </div>
