#93 Änderung der Nutzerdaten möglich + Refactoring

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -25,7 +25,7 @@
                 <li>
                     <a *ngIf="cookieService.get('online')" routerLink="/myAccount" routerLinkActive="active">
                         <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-                        Mein Account ({{cookieService.get('user')}})
+                        Mein Konto ({{cookieService.get('user')}})
                     </a>
                 </li>
                 <li>
