#107 Eigenen Angebote im mein Kontobereich

--- a/project/src/app/components/my-account/my-account.component.html
+++ b/project/src/app/components/my-account/my-account.component.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal">
+<form style="margin-top:10px" class="form-horizontal">
   <fieldset>
 
     <!-- Form Name -->
@@ -42,3 +42,33 @@
     </div>
   </fieldset>
 </form>
+
+<legend>Meine Angebote</legend>
+<div>
+  <ul>
+    <li *ngFor="let car of cars">
+      <div class="row featurette">
+        <div class="col-md-5">
+          <img class="featurette-image img-fluid mx-auto" width="100%" height="250" src="assets/images/amg_c.jpg" alt="Generic placeholder image">
+        </div>
+        <div class="col-md-7">
+          <h2 class="featurette-heading">{{ car.modell }} {{ car.manufacturer }}
+            <span class="text-muted price" *ngIf="car.price">{{ car.price }} €</span>
+          </h2>
+          <ul class="lead infoBox">
+            <li *ngIf="car.year"> Baujahr: {{ car.year }}</li>
+            <li *ngIf="car.colour"> Farbe: {{ car.colour }}</li>
+            <li *ngIf="car.category"> Kategorie: {{ car.category }}</li>
+          </ul>
+          <ul class="lead">
+            <li *ngIf="car.km_driven"> Kilometerstand: {{ car.km_driven }} km</li>
+            <li *ngIf="car.ps"> Leistung: {{ car.ps }} PS</li>
+            <li *ngIf="car.fuel_type"> Kraftstoffart: {{ car.fuel_type }}</li>
+          </ul>
+          <button type="button" class="btn btn-primary" (click)="toOffer(car.id)" routerLink="/toOffer/car.id" routerLinkActive="active">Zum Angebot</button>
+        </div>
+      </div>
+      <hr class="featurette-divider">
+    </li>
+  </ul>
+</div>
