--- a/project/src/app/components/my-account/my-account.component.css
+++ b/project/src/app/components/my-account/my-account.component.css
@@ -1,3 +1,13 @@
-body {
-    background-color: black;
+.featurette-divider {
+    border-color: grey;
+}
+
+ul li {
+    list-style-type: none;
+}
+
+.infoBox {
+    display: inline-block;
+    float: left;
+    margin-right: 60px;
 }
