dummy daten für bild uploader detalseite

--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -7,7 +7,9 @@
 
     <div class="panel-body">
         <div class="offer-detail-information-container">
-            <div class="offer-detail-image-container">IMAGE PLACEHOLDER</div>
+            <div class="offer-detail-image-container">
+                <img class="featurette-image img-fluid mx-auto" width="100%" height="315" src="{{imagePath}}" alt="Generic placeholder image">
+            </div>
         </div>
 
         <hr class="featurette-divider">
@@ -119,7 +121,6 @@
                 <h4>Angebotsinformationen</h4>
                 <hr class="featurette-divider">
                 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span> {{relatedOffer.description}}
-
             </div>
         </div>
 
