--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -8,7 +8,7 @@
     <div class="panel-body">
         <div class="offer-detail-information-container">
             <div class="offer-detail-image-container">
-                <img class="featurette-image img-fluid mx-auto" width="100%" height="315" src="{{imagePath}}" alt="Generic placeholder image">
+                <img class="featurette-image img-fluid mx-auto" width="100%" height="315" [src]="getCarPicture(selectedCar.id)" alt="Generic placeholder image">
             </div>
         </div>
 
