--- a/project/src/app/components/home/home.component.html
+++ b/project/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <li *ngFor="let car of cars">
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" width="100%" height="250" src="assets/images/amg_c.jpg" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid mx-auto" width="100%" height="250" [src]="getCarPicture(car.id)" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">{{ car.modell }} {{ car.manufacturer }}
